--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,14 @@
 
 # production
 /build
+
 /.firebase
 /.vscode
 
 
 # misc
 .DS_Store
-.env*
+.env
 .env.local
 .env.development.local
 .env.test.local
