--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
+    "@material-ui/lab": "^4.0.0-alpha.29",
     "classnames": "^2.2.6",
     "firebase": "^6.1.1",
     "react": "^16.8.6",
